# memmo_anymal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clang-format  geometry_utils.py  package.xml
bindings/: walkgen.cpp
notebooks/: sl1m_integration_planeseg.ipynb
stand_alone_scenarios/: anymal_stairs.py
tools/: SurfaceData.py  plot_tools.py
walkgen/: FootStepManager.py  FootStepPlanner.py  FootStepTrajectory.py  GaitManager.py  SurfacePlanner.py  SurfacePlannerURDF.py  SurfacePlannerWrapper.py  WalkgenRosMessageConversion.py  __init__.py  contact.py  geometry_utils.py  params.py
walkgen/config/: parameters.yaml  params.yaml
walkgen/stand_alone_scenarios/: anymal_stairs.py  anymal_stairs_planeseg.py  anymal_stairs_urdf.py
walkgen/tests/: surface_planner.py  surface_planner_planeseg.py  surface_planner_urdf.py
walkgen/tools/: SurfaceData.py  Tess2.py  geometry_utils.py  heightmap.py  heightmap_generator.py  optimisation.py  plot_tools.py
walkgen_footstep_planner/: CMakeLists.txt  README.md
walkgen_footstep_planner/bindings/: walkgen.cpp
walkgen_footstep_planner/bindings/utils/: map-converter.hpp  vector-converter.hpp
walkgen_footstep_planner/config/: params.yaml
walkgen_footstep_planner/include/: ContactPhase.hpp  ContactSchedule.hpp  Filter.hpp  FootStepPlanner.hpp  FootTrajectoryBezier.hpp  FootTrajectoryPolynomial.hpp  FootTrajectoryWrapper.hpp  Gait.hpp  GaitManager.hpp  Params.hpp  Surface.hpp  Types.hpp
walkgen_footstep_planner/python/: CMakeLists.txt
walkgen_footstep_planner/python/walkgen_footstep_planner/: FootStepManager.py  FootStepPlanner.py  FootStepTrajectory.py  FootStepTrajectoryBezier.py  GaitManager.py  __init__.py  params.py
walkgen_footstep_planner/python/walkgen_footstep_planner/tools/: Filter.py  Logger.py  Surface.py  optimisation.py
walkgen_footstep_planner/src/: ContactPhase.cpp  ContactSchedule.cpp  FootStepPlanner.cpp  FootTrajectoryBezier.cpp  FootTrajectoryPolynomial.cpp  FootTrajectoryWrapper.cpp  Gait.cpp  GaitManager.cpp  Params.cpp  Surface.cpp
walkgen_ros/: README.md
walkgen_ros/python/: CMakeLists.txt
walkgen_ros/python/walkgen_ros/: WalkgenRosMessageConversion.py  WalkgenRosVisualization.py  __init__.py
walkgen_surface_planner/: CMakeLists.txt  README.md
walkgen_surface_planner/bindings/: vector-converter.hpp  walkgen_surface.cpp
walkgen_surface_planner/config/: params.yaml
walkgen_surface_planner/include/: TerrainSlope.hpp  Types.hpp
walkgen_surface_planner/python/: CMakeLists.txt
walkgen_surface_planner/python/walkgen_surface_planner/: SurfacePlanner.py  __init__.py  params.py
walkgen_surface_planner/python/walkgen_surface_planner/data/: example_environment.pickle  example_environment_prot2.pickle  example_marker_array_processed.pickle  example_marker_array_processed_prot2.pickle
walkgen_surface_planner/python/walkgen_surface_planner/data/meshes/: one_step.stl
walkgen_surface_planner/python/walkgen_surface_planner/stand_alone_scenarios/: anymal_stairs.py  anymal_stairs_planeseg.py  anymal_stairs_urdf.py
walkgen_surface_planner/python/walkgen_surface_planner/tests/: surface_planner_planeseg.py  surface_planner_urdf.py
walkgen_surface_planner/python/walkgen_surface_planner/tools/: Surface.py  SurfaceData.py  collisions_utils.py  geometry_utils.py  heightmap.py  heightmap_generator.py  plot_tools.py
walkgen_surface_planner/src/: TerrainSlope.cpp
walkgen_surface_processing/: CMakeLists.txt  README.md
walkgen_surface_processing/bindings/: vector-converter.hpp  walkgen_processing.cpp
walkgen_surface_processing/config/: params.yaml
walkgen_surface_processing/include/: AffordanceLoader.hpp  Bayazit.hpp  Point.hpp  Types.hpp  common.hpp
walkgen_surface_processing/notebooks/: post-processing-tools.ipynb  processing_surfaces.ipynb
walkgen_surface_processing/python/: CMakeLists.txt
walkgen_surface_processing/python/walkgen_surface_processing/: SurfaceDetector.py  SurfaceProcessing.py  __init__.py  params.py  surface_detector.py  surface_loader.py  surface_processing.py
walkgen_surface_processing/python/walkgen_surface_processing/data/: example_marker_array_prot2.pickle
walkgen_surface_processing/python/walkgen_surface_processing/data/meshes/ICRA_parkour/: map_surfaces_001.stl  map_surfaces_002.stl  map_surfaces_003.stl  map_surfaces_004.stl  map_surfaces_005.stl  map_surfaces_006.stl  map_surfaces_007.stl  map_surfaces_008.stl  map_surfaces_009.stl  map_surfaces_010.stl  map_surfaces_011.stl  map_surfaces_012.stl  map_surfaces_013.stl  map_surfaces_014.stl  map_surfaces_015.stl  map_surfaces_016.stl  map_surfaces_017.stl  map_surfaces_018.stl  map_surfaces_019.stl  map_surfaces_020.stl  map_surfaces_021.stl  map_surfaces_022.stl  map_surfaces_023.stl  map_surfaces_024.stl  map_surfaces_025.stl  map_surfaces_026.stl  map_surfaces_027.stl  map_surfaces_028.stl  map_surfaces_029.stl  map_surfaces_030.stl  map_surfaces_031.stl  map_surfaces_032.stl  map_surfaces_033.stl  map_surfaces_034.stl  map_surfaces_035.stl  map_surfaces_036.stl  map_surfaces_037.stl  map_surfaces_038.stl  map_surfaces_039.stl  map_surfaces_040.stl  (+352 more)
walkgen_surface_processing/python/walkgen_surface_processing/examples/: process_icra_scene.py  process_planeseg.py  process_stl.py  process_stl_folder.py
walkgen_surface_processing/python/walkgen_surface_processing/tools/: Bayazit.py  EarCut.py  Snoeyink_Keil.py  SurfaceData.py  Tess2.py  geometry_utils.py  plot_tools.py  transforms.py
walkgen_surface_processing/src/: AffordanceLoader.cpp  Bayazit.cpp  Point.cpp  common.cpp  debug.cpp
